@@ -28,13 +28,14 @@ bson_append_code_with_scope (bson_t       *bson,
       <tr><td><p>key</p></td><td><p>An ASCII C string containing the name of the field.</p></td></tr>
       <tr><td><p>key_length</p></td><td><p>The length of <code>key</code> in bytes, or -1 to determine the length with <code>strlen()</code>.</p></td></tr>
       <tr><td><p>javascript</p></td><td><p>A NULL-terminated UTF-8 encoded string containing the javascript fragment.</p></td></tr>
-      <tr><td><p>scope</p></td><td><p>A <code xref="bson_t">bson_t</code> containing the scope for <code>javascript</code>.</p></td></tr>
+      <tr><td><p>scope</p></td><td><p>Optional <code xref="bson_t">bson_t</code> containing the scope for <code>javascript</code>.</p></td></tr>
     </table>
   </section>
 
   <section id="description">
     <title>Description</title>
     <p>The <code xref="bson_append_code_with_scope">bson_append_code_with_scope()</code> function shall perform like <code xref="bson_append_code">bson_append_code()</code> except it allows providing a scope to the javascript function in the form of a bson document.</p>
+    <p>If <code>scope</code> is NULL, this function appends an element with BSON type "code", otherwise with BSON type "code with scope".</p>
   </section>
 
   <section id="return">
