@@ -952,7 +952,7 @@ bson_append_code_with_scope (bson_t       *bson,         /* IN */
    BSON_ASSERT (key);
    BSON_ASSERT (javascript);
 
-   if (bson_empty0 (scope)) {
+   if (scope == NULL) {
       return bson_append_code (bson, key, key_length, javascript);
    }
 
@@ -2711,9 +2711,9 @@ _bson_as_json_visit_code (const bson_iter_t *iter,
    escaped = bson_utf8_escape_for_json (v_code, v_code_len);
 
    if (escaped) {
-      bson_string_append (state->str, "\"");
+      bson_string_append (state->str, "{ \"$code\" : \"");
       bson_string_append (state->str, escaped);
-      bson_string_append (state->str, "\"");
+      bson_string_append (state->str, "\" }");
       bson_free (escaped);
       return false;
    }
@@ -2748,19 +2748,30 @@ _bson_as_json_visit_codewscope (const bson_iter_t *iter,
                                 void              *data)
 {
    bson_json_state_t *state = data;
-   char *escaped;
+   char *code_escaped;
+   char *scope;
 
-   escaped = bson_utf8_escape_for_json (v_code, v_code_len);
-
-   if (escaped) {
-      bson_string_append (state->str, "\"");
-      bson_string_append (state->str, escaped);
-      bson_string_append (state->str, "\"");
-      bson_free (escaped);
-      return false;
+   code_escaped = bson_utf8_escape_for_json (v_code, v_code_len);
+   if (!code_escaped) {
+      return true;  /* error */
    }
 
-   return true;
+   scope = bson_as_json (v_scope, NULL);
+   if (!scope) {
+      bson_free (code_escaped);
+      return true;
+   }
+
+   bson_string_append (state->str, "{ \"$code\" : \"");
+   bson_string_append (state->str, code_escaped);
+   bson_string_append (state->str, "\", \"$scope\" : ");
+   bson_string_append (state->str, scope);
+   bson_string_append (state->str, " }");
+
+   bson_free (code_escaped);
+   bson_free (scope);
+
+   return false;
 }
 
 
