@@ -86,6 +86,7 @@ EXTRA_DIST += \
 	tests/bson-tests.h \
 	tests/binary/binary_deprecated.bson \
 	tests/binary/codewscope.bson \
+	tests/binary/code_w_empty_scope.bson \
 	tests/binary/dollarquery.bson \
 	tests/binary/dotkey.bson \
 	tests/binary/dotquery.bson \
